# code_templates

./: .gitignore
cpp/: CMakeLists.txt  avg.cpp  main.cpp
cpp/non_ros/: CMakeLists.txt
cpp/non_ros/config/: config.yaml
cpp/non_ros/include/: kumo_algorithms.h
cpp/non_ros/src/: main.cpp  params.hpp
